Implemented Filter, Search, Purchase, Buy token, Buy Premium. Added Premium class for acount type. [30/60]