@@ -4,12 +4,12 @@ import app.action.ActionType;
 import app.pages.PageType;
 import app.pages.auth.PageAuth;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.Set;
 
 public final class PageUpgrades extends PageAuth {
     public PageUpgrades() {
-        super(new HashSet<>(Arrays.asList(PageType.MOVIES, PageType.LOGOUT, PageType.HOME)),
-                new HashSet<>(Arrays.asList(ActionType.BUYTOKEN, ActionType.BUYPREAMIUM)));
+        super(new HashSet<>(Set.of(PageType.UPGRADE, PageType.MOVIES, PageType.LOGOUT, PageType.HOME)),
+                new HashSet<>(Set.of(ActionType.BUYTOKEN, ActionType.BUYPREAMIUM)));
     }
 }
