@@ -4,12 +4,12 @@ import app.action.ActionType;
 import app.pages.PageType;
 import app.pages.noauth.PageNoAuth;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.Set;
 
 public final class PageLogin extends PageNoAuth {
     public PageLogin() {
-        super(new HashSet<>(Arrays.asList(PageType.REGISTER, PageType.NOAUTH)),
-                new HashSet<>(Arrays.asList(ActionType.LOGIN)));
+        super(new HashSet<>(Set.of(PageType.LOGIN, PageType.REGISTER, PageType.NOAUTH)),
+                new HashSet<>(Set.of(ActionType.LOGIN)));
     }
 }
